[gd_scene load_steps=4 format=3 uid="uid://b2si5snpmegr6"]

[ext_resource type="Script" uid="uid://bjsp388o1qlkc" path="res://Scenes/Ball/Ball.gd" id="1_x8fbi"]

[sub_resource type="SphereShape3D" id="SphereShape3D_41u45"]

[sub_resource type="SphereMesh" id="SphereMesh_ktgx5"]

[node name="Ball" type="RigidBody3D"]
collision_mask = 6
script = ExtResource("1_x8fbi")

[node name="CollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_41u45")

[node name="MeshInstance" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_ktgx5")

[node name="StuckParts" type="Node3D" parent="."]

[node name="GroundCheck" type="RayCast3D" parent="."]
collision_mask = 4
